# seafile-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/seafile_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  utils.py
