[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seafile-mcp"
version = "0.1.0"
description = "MCP server for Seafile cloud storage - access your self-hosted files from AI assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "5p00kyy", email = "partialabstraction@gmail.com"}]
requires-python = ">=3.10"
keywords = ["mcp", "seafile", "cloud-storage", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
seafile-mcp = "seafile_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/5p00kyy/seafile-mcp"
Repository = "https://github.com/5p00kyy/seafile-mcp"
Issues = "https://github.com/5p00kyy/seafile-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seafile_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
